--- a/sidebardata.html
+++ b/sidebardata.html
@@ -4,7 +4,7 @@
   </HEAD>
   <BODY>
     <center>
-      <script type="text/javascript" language="JavaScript" src="http://www.windfinder.com/widget/forecast/js/north_point_prince_edward?unit_wave=m&unit_rain=mm&unit_temperature=c&unit_wind=m_s&columns=1&days=2&show_day=0&show_waves=0"></script><noscript><a href='http://www.windfinder.com/forecast/north_point_prince_edward?utm_source=forecast&utm_medium=web&utm_campaign=homepageweather&utm_content=noscript-forecast'>Wind forecast for North Point/Prince Edward</a> provided by <a href='http://www.windfinder.com?utm_source=forecast&utm_medium=web&utm_campaign=homepageweather&utm_content=noscript-logo'>windfinder.com</a></noscript>
+      <script type="text/javascript" src="https://www.windfinder.com/widget/forecast/js/north_point_prince_edward?unit_wave=m&unit_rain=mm&unit_temperature=c&unit_wind=m_s&columns=1&days=2&show_day=0&show_waves=0"></script><noscript><a href='https://www.windfinder.com/forecast/north_point_prince_edward?utm_source=forecast&utm_medium=web&utm_campaign=homepageweather&utm_content=noscript-forecast'>Wind forecast for North Point/Prince Edward</a> provided by <a href='https://www.windfinder.com?utm_source=forecast&utm_medium=web&utm_campaign=homepageweather&utm_content=noscript-logo'>windfinder.com</a></noscript>
     </center>
   </BODY>
 </HTML>
